@@ -1,0 +1,3 @@
+Site URL: https://freshporno.net/
+Contact: https://freshporno.net/contact/
+DMCA: https://freshporno.net/dmca/
