@@ -1,0 +1,2 @@
+Site URL: https://hentai-moon.com/
+DMCA: https://hentai-moon.com/dmca/
