@@ -1,0 +1,3 @@
+Site URL: https://www.seaporn.org/
+Contact: https://www.seaporn.org/contact/
+DMCA: https://www.seaporn.org/dmca/
