@@ -22,39 +22,39 @@ from six.moves import urllib_parse
 from resources.lib import utils
 from resources.lib.adultsite import AdultSite
 
-site = AdultSite('naughtyblog', '[COLOR hotpink]NaughtyBlog[/COLOR] [COLOR red][Debrid only]', 'https://www.naughtyblog.org/', 'https://www.naughtyblog.org/wp-content/images/logo/main_logo.png', 'naughtyblog')
+site = AdultSite('seaporn', '[COLOR hotpink]SeaPorn[/COLOR] [COLOR red][Debrid only][/COLOR]', 'https://www.seaporn.org/', '', 'seaporn')
 
 
 @site.register(default_mode=True)
 def Main():
-    site.add_dir('[COLOR hotpink]Categories[/COLOR]', site.url + 'categories/', 'Categories', site.img_cat)
-    site.add_dir('[COLOR hotpink]Movies[/COLOR]', site.url + 'category/movies/', 'List', site.img_cat)
+    site.add_dir('[COLOR hotpink]Categories[/COLOR]', site.url, 'Categories', site.img_cat)
     site.add_dir('[COLOR hotpink]Search[/COLOR]', site.url + '?s=', 'Search', site.img_search)
-    List(site.url + 'category/clips/')
+    List(site.url)
     utils.eod()
 
 
 @site.register()
 def List(url):
     listhtml = utils.getHtml(url, '')
-    match = re.compile('class="post-author">(.*?)post-content.*?<a href="([^"]+)"><img.*?src="([^"]+)".*?title="([^"]+)".*?<strong>([^<]+)<.*?<em>([^<]+)<.*?<p>([^<]+)<', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    match = re.compile('entry-title"><a href="([^"]+)"[^>]+>([^<]+).*?<time[^>]+>([^<]+)<.*?src="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(listhtml)
     if not match:
         return
-    for tags, videopage, img, name, title, release, plot in match:
+    for videopage, name, posted, img in match:
         name = utils.cleantext(name)
-        plot = "{}\n{}\n{}".format(utils.cleantext(title), utils.cleantext(release), utils.cleantext(plot))
-        if any(tag in tags for tag in ['siterip', 'onlyfans-leak']):
+        plot = "{}\n{}".format(utils.cleantext(name), utils.cleantext(posted))
+
+        if 'static.keep2share' in img:
             continue
 
         contextmenu = []
         contexturl = (utils.addon_sys
-                          + "?mode=" + str('naughtyblog.Lookupinfo')
+                          + "?mode=" + str('seaporn.Lookupinfo')
                           + "&url=" + urllib_parse.quote_plus(videopage))
         contextmenu.append(('[COLOR deeppink]Lookup info[/COLOR]', 'RunPlugin(' + contexturl + ')'))
 
         site.add_download_link(name, videopage, 'Playvid', img, plot, contextm=contextmenu)
 
-    np = re.compile(r'aria-label="Next Page"\s*href="([^"]+)"', re.DOTALL | re.IGNORECASE).search(listhtml)
+    np = re.compile('page-numbers" href="([^"]+)">Next', re.DOTALL | re.IGNORECASE).search(listhtml)
     if np:
         page_number = np.group(1).split('/')[-2]
         site.add_dir('Next Page (' + page_number + ')', np.group(1), 'List', site.img_next)
@@ -66,14 +66,13 @@ def Playvid(url, name, download=None):
     vp = utils.VideoPlayer(name, download)
     vp.progress.update(25, "[CR]Loading video page[CR]")
     sitehtml = utils.getHtml(url, site.url)
-    downloads = re.compile('id="download">(.*?)</div>', re.DOTALL | re.IGNORECASE).findall(sitehtml)[0]
-    sources = re.compile(r'href="([^"]+)"\s+?title="([^\s]+)\s', re.DOTALL | re.IGNORECASE).findall(downloads)
+    sources = re.compile('<a href="([^"]+)" class="autohyperlink">https*://([^/]+)', re.DOTALL | re.IGNORECASE).findall(sitehtml)
     links = {}
     for link, hoster in sources:
+        utils.kodilog(f"link: {link} hoster: {hoster}")
         if vp.resolveurl.HostedMediaFile(link).valid_url():
-            linkparts = link.split('.')
-            quality = linkparts[-3] if link.endswith('.html') else linkparts[-2]
-            hoster = f"{hoster} {quality}"
+            filename = link.split('/')[-1]
+            hoster = f"{hoster} {filename}"
             links[hoster] = link
     videourl = utils.selector('Select link', links)
     if not videourl:
@@ -96,9 +95,12 @@ def Search(url, keyword=None):
 @site.register()
 def Categories(url):
     listhtml = utils.getHtml(url)
-    match = re.compile('href="([^"]+)"[^>]+>([^<]+)<span class="pocetvideicat">([^<]+)<', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    match = re.compile(r'cat-item-\d+"><a\s+?href="([^"]+)">([^<]+)</a>\s+?\(([^\)]+)\)', re.DOTALL | re.IGNORECASE).findall(listhtml)
     for catpage, name, videos in match:
         name = utils.cleantext(name.strip())
+        if any(cat in name for cat in ['Galleries', 'Magazines', 'Pictures', 'Siterips', 'Mobile']):
+            continue
+        
         name = f"{name} - {videos.strip()} videos"
         site.add_dir(name, catpage, 'List', '')
     utils.eod()
@@ -113,32 +115,26 @@ def Lookupinfo(url):
 
     infodict = {}
 
-    categories = re.compile(r'/((?:category|tag)/[^"]+)"\s*?rel="(?:category )*?tag">([^<]+)<', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    categories = re.compile(r'/(category/[^"]+)"\s*?rel="category tag">([^<]+)<', re.DOTALL | re.IGNORECASE).findall(listhtml)
     if categories:
         for url, cat in categories:
             cat = "Cat - " + cat.strip()
             infodict[cat] = site.url + url
 
-    sites = re.compile(r'(site/[^"]+)"\s*?rel="tag">([^<]+)', re.DOTALL | re.IGNORECASE).findall(listhtml)
-    if sites:
-        for url, sitename in sites:
-            sitename = "Site - " + sitename.strip()
-            infodict[sitename] = site.url + url
-
-    models = re.compile(r'/(pornstar/[^"]+)"\s*?rel="tag">([^<]+)<', re.DOTALL | re.IGNORECASE).findall(listhtml)
-    if models:
-        for url, model in models:
-            model = "Model - " + model.strip()
-            infodict[model] = site.url + url
+    tags = re.compile(r'/(tag/[^"]+)"\s*?rel="tag">([^<]+)<', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    if tags:
+        for url, tag in tags:
+            tag = "Tag - " + tag.strip()
+            infodict[tag] = site.url + url
 
     if infodict:
         selected_item = utils.selector('Choose item', infodict, show_on_one=True)
         if not selected_item:
             return
         contexturl = (utils.addon_sys
-                      + "?mode=" + str('naughtyblog.List')
+                      + "?mode=" + str('seaporn.List')
                       + "&url=" + urllib_parse.quote_plus(selected_item))
         xbmc.executebuiltin('Container.Update(' + contexturl + ')')
     else:
-        utils.notify('Notify', 'No models, categories or sites found for this video')
+        utils.notify('Notify', 'No tags or categories found for this video')
     return
